<?xml version="1.0"?>
<package>
  <name>cpp_uav</name>
  <version>0.1.0</version>
  <description>The package for aerial coverage path planning.</description>

  <maintainer email="t_ueno@eis.hokudai.ac.jp">Takaki Ueno</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>python-matplotlib</run_depend>

  <export>
  </export>
</package>
